--- a/docs/sides/Afterpeak/style.css
+++ b/docs/sides/Afterpeak/style.css
@@ -91,11 +91,11 @@ I used to use Sass (still do sometimes), but now that it's supported natively, l
 
   /** base colors **/
   --colWhite: rgba(255,255,255);
-  --colRed: #f59b1d;
-  --colRed2: #f59b1d;
-  --colBlue: #785627;
-  --colBlue2: #0088CC;
-  --colBlue3: rgba(120,86,39,0.2);
+  --colRed: #b929ee;
+  --colRed2: #b929ee;
+  --colBlue: #b929ee;
+  --colBlue2: #ede8e0;
+  --colBlue3: rgba(237,232,224);
   --colBlue4: #785627;
   --colGreen: rgba(190,154,98,0.08);
   --colGreen2: rgba(190,154,98,0.21);
@@ -108,7 +108,7 @@ I used to use Sass (still do sometimes), but now that it's supported natively, l
   --colTextInverse: var(--colWhite);
 
   /** font stacks **/
-  --fontMerri: 'Fjalla One', sans-serif;
+  --fontMerri: 'Oswald', sans-serif;
   --fontOpen: 'Open Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 
   /** font sizes **/
