--- a/docs/assets/css/templatemo-digimedia-v1.css
+++ b/docs/assets/css/templatemo-digimedia-v1.css
@@ -1412,7 +1412,7 @@ Services Style
 .services .naccs .menu div .thumb {
   display: inline-block;
   width: 100%;
-  padding: 30px;
+  padding: 30px 0px;
   background-color: #fff;
 }
 
